--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -36,8 +36,9 @@ jobs:
     - name: Create Release
       id: create_release
       uses: actions/create-release@v1
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} 
       with:
-        token: ${{ secrets.GITHUB_TOKEN }}
         tag_name: v${{ github.event.inputs.version }}
         release_name: Release ${{ github.event.inputs.version }}
         draft: true
@@ -47,7 +48,6 @@ jobs:
     - name: Upload Build 1 to Release
       uses: actions/upload-release-asset@v1
       with:
-        token: ${{ secrets.GITHUB_TOKEN }}
         release_id: ${{ steps.create_release.outputs.id }}
         asset_path: ./oCameraAgent
         asset_name: oCameraAgent
@@ -56,7 +56,6 @@ jobs:
     - name: Upload Build 2 to Release
       uses: actions/upload-release-asset@v1
       with:
-        token: ${{ secrets.GITHUB_TOKEN }}
         release_id: ${{ steps.create_release.outputs.id }}
         asset_path: ./oCameraAgent.arm
         asset_name: oCameraAgent.arm
