--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -47,6 +47,8 @@ jobs:
 
     - name: Upload Build 1 to Release
       uses: actions/upload-release-asset@v1
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} 
       with:
         release_id: ${{ steps.create_release.outputs.id }}
         asset_path: ./oCameraAgent
@@ -55,6 +57,8 @@ jobs:
 
     - name: Upload Build 2 to Release
       uses: actions/upload-release-asset@v1
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} 
       with:
         release_id: ${{ steps.create_release.outputs.id }}
         asset_path: ./oCameraAgent.arm
